--- a/src/main/App.css
+++ b/src/main/App.css
@@ -16,10 +16,14 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+body {
+  margin: 0;
+}
+
 /*Layout Grid*/
 
 .app {
-  margin: 0px;
+  margin: 0;
   display: grid;
   grid-template-columns: var(--aside-width) 1fr;
   grid-template-rows:
@@ -28,4 +32,26 @@
     "logo header"
     "menu content"
     "menu footer";
+  height: 100vh;
+  background-color: #f5f5f5;
+}
+
+aside.logo {
+  grid-area: logo;
+}
+
+header.header {
+  grid-area: header;
+}
+
+aside.menu-area {
+  grid-area: menu;
+}
+
+main.content {
+  grid-area: content;
+}
+
+footer.footer {
+  grid-area: footer;
 }
